# omni

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  instrumentation.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/: actions.ts  globals.css  layout.tsx  page.tsx
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: download_models.py  start.py
backend/src/omni_backend/: config.py  main.py
backend/src/omni_backend/routers/: api.py  yolo.py
backend/src/omni_backend/services/: coords.py  llm.py  runware.py  stt.py  tts.py
backend/tests/: conftest.py  test_health.py  test_yolo_ws.py
certificates/: cert.pem  key.pem
components/: backend-loader.tsx  capture-popup.tsx  echoes.tsx  face-voice.tsx  face.tsx  landing-content.tsx  meme-canvas.tsx  mermaid-diagram.tsx  mirror.tsx  onboarding-overlay.tsx  reveal.tsx  session-gallery.tsx  speech-bubble.tsx  tracker-v2.tsx  tracker.tsx  viewfinder.tsx
data/: postcards.ts  videos.ts
i18n/: config.ts  diagrams.ts  en.ts  zh.ts
lib/: api-client.ts  backend-url.ts  iou.ts  lang-detect.ts  lk.ts  onboarding.ts  runware.ts  session-cards.ts  tts.ts  whisper.ts  yolo-ws.ts  yolo.ts
react-native-executorch/: .env.example  .gitignore  CLAUDE.md  TESTING.md  app.json  babel.config.js  metro.config.js  package.json
react-native-executorch/server/: app.py  detect_coords.py  pyproject.toml  server.py
scripts/: inspect-onnx.py  kill.ps1  setup-ort.mjs  setup-sam2.sh  test-fish.mjs  test-glm.mjs  test-seg.mjs
server-v2/: README.md  (+2 more)
(+53 files in other folders)
